<resources>
    <string name="app_name">AnimalTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_animal_desc_button">Add new animal to the list</string>
    <string name="animal_name_hint">Name</string>
    <string name="animal_species">Species</string>
    <string name="animal_habitat">Habitat</string>
    <string name="add_new_animal">Add New Animal</string>
    <string name="add_animal">Add Animal</string>
</resources>